Handle importing redirects

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -29,14 +29,14 @@
     </header>
     <main>
       <div class="options-section">
-        On startup
+        <h2>On startup</h2>
         <label class="maria-tickbox">
           <input type="checkbox" name="greeting" checked="false" />
           Should play greeting
         </label>
       </div>
       <div class="options-section">
-        On magic number select, process lengths of
+        <h2>On magic number select, process lengths of</h2>
         <div class="digit-options">
           <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="6" />
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="options-section">
-        Redirect settings
+        <h2>Redirect settings</h2>
         <div>
           <ul id="redirectSettings" class="redirect-settings"></ul>
           <div class="add-redirect-box">
