Add ability to turn redirects off

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -66,6 +66,10 @@
       </div>
       <div class="options-section">
         <h2>Redirect settings</h2>
+        <label class="maria-tickbox">
+          <input type="checkbox" name="redirect" checked="false" />
+          Should redirect
+        </label>
         <div>
           <ul id="redirectSettings" class="redirect-settings"></ul>
           <div class="add-redirect-box">
