Get favicons the way extensions want you to; Toggle for whether or not to check for feeds; Move background audio in a popup, update to offscreen when ready

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -33,6 +33,10 @@
         <label class="maria-tickbox">
           <input type="checkbox" name="greeting" checked="false" />
           Should play greeting
+        </label>
+        <label class="maria-tickbox">
+          <input type="checkbox" name="feeds" checked="false" />
+          Should check RSS feeds
         </label>
       </div>
       <div class="options-section">
